# PokeBuilder

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
documentation/: documentation.md  sprint_11_documentation.md  sprint_1_documentation.md  sprint_2_documentation.md  sprint_3_documentation.md  sprint_4_documentation.md  sprint_5_documentation.md  sprint_6_documentation.md  sprint_7_documentation.md  sprint_8_documentation.md  sprint_9_documentation.md
resources/: crontab.txt
src/: pokemon_types_fetcher.py
src/api/: db.py  main.py
tests/: test_auth_models.py  test_auth_routes.py  test_auth_service.py  test_battle_log_api.py  test_battle_log_fetcher.py  test_battle_log_service.py  test_competitive_api.py  test_competitive_service.py  test_counter_api.py  test_counter_optimizer.py  test_coverage_service.py  test_generation_api.py  test_meta_service.py  test_optimization_api.py  test_pokemon_abilities_fetcher.py  test_pokemon_fetcher.py  test_pokemon_list_type_filter.py  test_regulation_api.py  test_regulation_m_a_fetcher.py  test_regulation_service.py  test_role_service.py  test_saved_team_api.py  test_saved_team_service.py  test_score_api.py  test_showdown_log_parser.py  test_smogon_sets_fetcher.py  test_stat_api.py  test_stat_service.py  test_team_analysis.py  test_team_api.py  test_team_generator.py  test_team_loader.py  test_team_optimizer.py  test_team_scorer.py  test_team_validator.py  test_type_api.py  test_type_service.py  test_user_service.py  test_vgc_sets_fetcher.py  test_weakness_service.py
(+159 files in other folders)
